# Email-Triage

./: .dockerignore  .gitattributes  .gitignore  Containerfile  LICENSE  README.md  SECURITY.md  compose.yaml  pyproject.toml
.github/scripts/: update_release_attestation_block.py
.github/workflows/: operator-attest.yml  release.yml  security.yml
config/: example-homelab.yaml  example-medical.yaml
deploy/: email-triage.container
docs/: hipaa-audit.md  install.md  privacy.md
scripts/: build-embedding-bits-manifest.py  deploy.sh  download-embedding-bits.sh  embedding-bits-manifest.json  gen-pwa-icons.py  install-embedding-bits.sh  install-git-hooks.sh  run-pip-audit.sh  test-broad.sh  test-fast.sh
src/email_triage/: __init__.py  __main__.py  _errfmt.py  _http_client.py  baa_expiry.py  backup.py  backup_snapshot_cleanup.py  cli.py  config.py  llm_health.py  llm_maintenance.py  mail_headers.py  metrics.py  retry_backoff.py  secrets.py  single_flight.py  tls.py  tls_csr.py  triage_logging.py  version.py
tests/: conftest.py  test_account_aliases.py  test_acme_cname_preflight.py  test_acme_hardening.py  test_acme_job_state.py  test_acme_jobs_persistence.py  test_acme_renewer.py  test_acme_retry_classifier.py  test_aioimaplib_patch.py  test_audit_strict_mode.py  test_baa_expiry.py  test_backup.py  test_backup_snapshot_cleanup.py  test_calendars_module.py  test_cli.py  test_cli_audit.py  test_cli_restore.py  test_cli_version_check.py  test_config.py  test_config_roundtrip.py  test_daily_health_retry_section.py  test_deploy_script.py  test_dev_keypair.py  test_digest_configs.py  test_digest_filter.py  test_digest_render.py  test_digest_sender_guards.py  test_http_client_long_lived.py  test_imap_blocking.py  test_imap_ensure_authenticated.py  test_imap_provider_resilience.py  test_imap_search_all_folders.py  test_imap_seen_uids_dedup.py  test_llm_health.py  test_llm_maintenance.py  test_log_no_token_leak.py  test_logging.py  test_m3_trigger_watcher.py  test_m7_trigger_watcher.py  test_mail_headers.py  (+32 more)
tests/test_actions/: test_actions.py  test_add_label.py  test_anti_ai_style_guide_prompt.py  test_digest.py  test_digest_hipaa_body_preview.py  test_draft_reply_m5_stitch.py  test_hipaa_style_distill.py  test_idempotency.py  test_invite_actions.py  test_m7_draft_overlay.py  test_m7_per_contact.py  test_move.py  test_recipient_digest.py  test_registry.py  test_self_sent_event.py  test_sent_mail_capture.py  test_sent_mail_index.py  test_style_profile.py  test_suggest_meeting_times.py
tests/test_ai_backends/: __init__.py  test_azure_openai.py  test_base.py  test_gemini_adapter.py  test_loader.py  test_openai_direct.py  test_registry.py
tests/test_cache/: test_classification.py
tests/test_classify/: test_discover.py  test_gemini.py  test_hints.py  test_ollama.py  test_openai_compat.py  test_prompts.py
tests/test_embedding_bits/: conftest.py  test_admin_ui_install_card.py  test_installer_auto_path.py  test_installer_hash_refuse.py  test_installer_idempotent.py  test_installer_sideload_path.py  test_reindex_job.py  test_runtime_ready_check.py  test_style_learning_gating.py
tests/test_engine/: test_availability.py  test_filters.py  test_flow.py  test_html_text.py  test_ics.py  test_models.py  test_query_lang.py  test_store.py
tests/test_providers/: test_base.py  test_dispatcher.py  test_factory.py  test_gmail_api.py  test_gmail_calendar.py  test_imap.py  test_normalize.py  test_oauth_http.py  test_oauth_refresh_lock.py  test_office365.py  test_office365_calendar.py  test_search_iter.py  test_traits.py
tests/test_web/: conftest.py  test_access_audit.py  test_account_aliases_ui.py  test_account_delegates.py  test_account_wizard.py  test_account_wizard_autochain.py  test_accounts.py  test_acme_cancel_endpoint.py  test_admin_acme_tooltips.py  test_admin_integrations_o365.py  (+120 more)
(+237 files in other folders)
